--- a/app/views/bussines_names/show.html.erb
+++ b/app/views/bussines_names/show.html.erb
@@ -26,7 +26,7 @@
     </tr>
     <tr>
       <th width="20%">Dirección Fiscal</th>
-      <td><%= @bussines_name.direccion_fiscal %></td>
+      <td><%= label_tag(:foo, raw(@bussines_name.direccion_fiscal))%></td>
     </tr>
   </tbody>
 </table>
