--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -27,7 +27,7 @@
   <div class="form-group row">
     <label class="col-form-label col-lg-3 col-sm-4">Direccion</label>
     <div class="col-lg-9 col-sm-8">
-      <%= f.text_area :direccion, rows: 5, :class => 'form-control' %>
+      <%= f.text_area :direccion, rows: 5, :id => 'froala-editor-enabled' %>
     </div>
   </div>
 
