--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,4 +14,7 @@
  * require_self
  */
 @import "bootstrap";
+@import "froala_editor.min";
+@import "froala_style.min";
 @import "font-awesome";
+@import "font-awesome-sprockets";
