--- a/app/views/bussines_names/_form.html.erb
+++ b/app/views/bussines_names/_form.html.erb
@@ -26,8 +26,8 @@
 
   <div class="form-group row">
     <label class="col-form-label col-lg-3 col-sm-4">Direccion</label>
-    <div class="col-lg-9 col-sm-8">
-      <%= f.text_area :direccion_fiscal, rows: 5, :class => 'form-control' %>
+    <div class="col-lg-9 col-sm-8" id="froala-editor">
+      <%= f.text_area :direccion_fiscal, rows: 5, :id => 'froala-editor-enabled' %>
     </div>
   </div>
 
