--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -24,10 +24,11 @@
     </div>
   </div>
 
+
   <div class="form-group row">
     <label class="col-form-label col-lg-3 col-sm-4">Descripción</label>
-    <div class="col-lg-9 col-sm-8">
-      <%= f.text_area :descripcion, rows: 5, class: 'form-control' %>
+     <div class="col-lg-9 col-sm-8">
+      <%= f.text_area :descripcion, rows: 5, :id => 'froala-editor-enabled' %>
     </div>
   </div>
 
