--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -26,7 +26,7 @@
     </tr>
     <tr>
       <th>Descripcion</th>
-      <td><%= @product.descripcion %></td>
+       <td><%= label_tag(:foo, raw(@product.descripcion))%></td>
     </tr>
     <tr>
       <th>Cantidad</th>
