--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -43,7 +43,7 @@
 
   <div class="field">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off,:class => 'form-control'" %>
+    <%= f.password_field :password_confirmation, autocomplete: "off",:class => 'form-control' %>
   </div>
 
   <div class="field">
@@ -56,9 +56,5 @@
   </div>
   <div class="clearfix"></div>
 <% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
