[#156073533] Realizando algunos ajustes a la rama autenticacion
Notas:
- Las variables globales las paso al archivo application.yml
- Se elimina el archivo .env que no se utiliza
- Se agrega la autenticacion a los controllers para verificar el acceso
- Se modifica el layout principal para mostrar el usuario autenticado
	deleted:    .env
	modified:   Gemfile.lock
	modified:   app/controllers/bussines_names_controller.rb
	modified:   app/controllers/companies_controller.rb
	modified:   app/controllers/products_controller.rb
	modified:   app/controllers/welcome_controller.rb
	modified:   app/views/layouts/admin/_sidebar.html.erb
	modified:   app/views/layouts/admin/_topbar.html.erb
	modified:   config/environments/development.rb

--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -2,7 +2,9 @@
   <%= image_tag "imageCap.svg", class: 'card-img-top' %>
   <div class="card-body">
     <p class="card-text text-center">
-      <small class="text-muted">Nombre Usuario<%# "#{current_user.nombre} #{current_user.apellidos}" %></small>
+      <small class="text-muted">
+        <%= user_signed_in? ? current_user.nombre_usuario : "Nombre Usuario" %>
+      </small>
     </p>
   </div>
 </div>
