--- a/app/views/layouts/admin/_topbar.html.erb
+++ b/app/views/layouts/admin/_topbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-dark navbar-expand-lg" style="background-color: #1D142B;">
-  <%= link_to welcome_index_path, class: 'navbar-brand' do %>
+  <%= link_to root_path, class: 'navbar-brand' do %>
     <%= image_tag "logo24.png", class: 'd-inline-block align-center' %>
     <span class="navbar-logotxt">Punto de Venta</span>
   <% end %>
