--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -17,9 +17,6 @@
   menuCatalogos = "collapsed"
   subCatalogos = ""
 
-  menuReportes = "collapsed"
-  subReportes = ""
-
   case params[:controller]
     when "products"
       menuCatalogos = ""
@@ -27,9 +24,6 @@
     when "bussines_names", "companies"
       menuCompania = ""
       subCompania = "show"
-    when "reports/products"
-      menuReportes = ""
-      subReportes = "show"
   end
 %>
 <div class="list-group panel">
@@ -46,10 +40,11 @@
       <%= link_to "Productos", products_path, class: (params[:controller] == 'products' ? 'list-group-item list-group-item-action active' : 'list-group-item list-group-item-action') %>
   </div>
 
-  <a href="#menu3" class="list-group-item <%= menuCatalogos %> bg-dark text-white" data-toggle="collapse"><i class="fa fa-line-chart"></i> <span class="hidden-sm-down">Reportes</span></a>
-  <div class="collapse <%= subReportes %>" id="menu3">
+  <a href="#menu3" class="list-group-item collapsed bg-dark text-white" data-toggle="collapse"><i class="fa fa-line-chart"></i> <span class="hidden-sm-down">Reportes</span></a>
+  <div class="collapse" id="menu3">
+<% #binding.pry%>
        <%= link_to "Existencia a productos",  new_reports_product_path, class: (params[:controller] == 'reports/products' ? 'list-group-item list-group-item-action active' : 'list-group-item list-group-item-action') %>
-      <a href="#" class="list-group-item">Reportes de Ventas</a>
+      <a href="#" class="list-group-item">Ventas</a>
   </div>
 
   <%= link_to "Ventas", "", class: (params[:controller] == 'sales' ? 'list-group-item list-group-item-action active' : 'list-group-item list-group-item-action') %>
