--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -43,8 +43,8 @@
   <a href="#menu3" class="list-group-item collapsed bg-dark text-white" data-toggle="collapse"><i class="fa fa-line-chart"></i> <span class="hidden-sm-down">Reportes</span></a>
   <div class="collapse" id="menu3">
 <% #binding.pry%>
-       <%= link_to "Existencia a productos",  new_reports_product_path, class: (params[:controller] == 'reports/products' ? 'list-group-item list-group-item-action active' : 'list-group-item list-group-item-action') %>
-      <a href="#" class="list-group-item">Ventas</a>
+      <%= link_to "Existencia a productos",  new_reports_product_path, class: (params[:controller] == 'reports/products' ? 'list-group-item list-group-item-action active' : 'list-group-item list-group-item-action') %>
+      <%= link_to "Existencia a ventas",  new_reports_sale_path, class: (params[:controller] == 'reports/sales' ? 'list-group-item list-group-item-action active' : 'list-group-item list-group-item-action') %>
   </div>
 
   <%= link_to "Ventas", "", class: (params[:controller] == 'sales' ? 'list-group-item list-group-item-action active' : 'list-group-item list-group-item-action') %>
