[#157155423] Realizando pago con API
Notas:
- Se actualiza el Menu principal, agregando los elementos activos
- Se realiza el proceso de compra y cargo a la tarjeta
- De momento solo se aceptan tarjetas de credito/debito
	new file:   Gemfile.lock
	modified:   app/assets/stylesheets/application.scss
	new file:   app/controllers/charges_controller.rb
	modified:   app/controllers/sales_controller.rb
	new file:   app/helpers/charges_helper.rb
	new file:   app/views/charges/_data_order.html.erb
	new file:   app/views/charges/_order_detail.html.erb
	new file:   app/views/charges/charge.html.erb
	new file:   app/views/charges/new.html.erb
	modified:   app/views/layouts/admin/_sidebar.html.erb
	new file:   app/views/sales/_table_detail.html.erb
	modified:   app/views/sales/index.html.erb
	modified:   app/views/sales/new.html.erb
	modified:   app/views/sales/show.html.erb
	modified:   config/routes.rb
	new file:   test/controllers/charges_controller_test.rb

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,3 +18,5 @@
 @import "froala_style.min";
 @import "font-awesome";
 @import "font-awesome-sprockets";
+
+.card-errors{ margin: 10px 0px; color: red; }
