modified:   Gemfile 	modified:   Gemfile.lock 	new file:   app/assets/images/logo.png 	modified:   app/controllers/sales_controller.rb 	new file:   app/pdfs/invoice_pdf.rb 	modified:   app/views/sales/show.html.erb 	modified:   config/initializers/mime_types.rb

--- a/app/views/sales/show.html.erb
+++ b/app/views/sales/show.html.erb
@@ -57,7 +57,10 @@
         
       </tbody>
     </table>
-
+<div class="pull-left">
+  Descargar&nbsp;
+  <%= link_to "[ pdf ]", sale_path(@sale, format: 'pdf') %>
+</div>
   </div>
   
   <!-- Detail Data -->
