--- a/app/views/reports/products/index.html.erb
+++ b/app/views/reports/products/index.html.erb
@@ -1,5 +1,6 @@
 <div class="pull-right">
   <%= link_to "Nueva", new_product_path, class: 'btn btn-danger' %>
+  <%= link_to 'Excel', reports_products_path(format: :xls),class: 'btn btn-success' %> 
 </div>
 <div class="clearfix"></div>
 <br />
