--- a/app/views/sales/_detail_fields.html.erb
+++ b/app/views/sales/_detail_fields.html.erb
@@ -1,27 +1,28 @@
 
 <div class="nested-fields">
-
     <div class="row">
         <div class="col-xs-6 col-sm-2">
-            <%= f.input :cantidad,  :input_html => {
-                :class => "clase de prueba"
-                },label: false %>
+            <%= f.input :cantidad, input_html: { :class => "input_cantidad" },label: false %>
         </div>
 
         <div class="col-xs-6 col-sm-3">
-            <%= f.select :product_id, Product.all.map { |u| [u.nombre, u.id ]},{ prompt: '- Seleccionar -'},{class:"form-control"}%>
+            <div class="form-group">
+                <%= f.select :product_id, Product.all.map { |u| [u.nombre, u.id ]},{ prompt: '- Seleccionar -'},{class:"form-control"}%>
+            </div>
         </div>
 
         <div class="col-xs-6 col-sm-3">
-            <%= f.input :importe, class:"test2", label: false  %>
+            <%= f.input :importe, input_html: { :class => "input_importe" }, label: false  %>
         </div>
 
         <div class="col-xs-6 col-sm-">
             <%= link_to_remove_association "Eliminar", f, class: 'btn btn-primary btn-xs' %>
         </div>
 
-        <div class="col-xs-6 col-sm-2">
-        <%= f.label :saldo, class:"saldo" %>
+        <div class="col-xs-6 col-sm-2 text-right">
+            <div class="form-group">
+                <label class="col-form-label">0.00</label>
+            </div>
         </div>
         
     </div>
