--- a/app/views/sales/_form.html.erb
+++ b/app/views/sales/_form.html.erb
@@ -18,23 +18,31 @@
   </div>
   </div>
 
-  <table class='table'>
+<table class='table'>
   <div class="page-header">
    <h4> Detalle de la venta  </h4>
   </div>
+  
   <div class="row">
-  <div class="col-xs-6 col-sm-3">
-  <h5>Cantidad</h1>
+    <div class="col-xs-6 col-sm-2">
+      <h5>Cantidad</h5>
+    </div>
+
+    <div class="col-xs-6 col-sm-3">
+      <h5>Producto</h5>
+    </div>
+
+    <div class="col-xs-6 col-sm-3">
+      <h5>Precio</h5>
+    </div>
+
+    <div class="col-xs-6 col-sm-2"></div>
+
+    <div class="col-xs-6 col-sm-2">
+      <h5>Importe</h5>
+    </div>
   </div>
-  
-  <div class="col-xs-6 col-sm-3">
-  <h5>Producto</h1>
-  </div>
-  
-  <div class="col-xs-6 col-sm-3">
-  <h5>Importe</h1>  
-  </div>
-  </div>
+
   <tbody >
     <%= f.simple_fields_for :details do |builder| %>
       <%= render 'detail_fields', f: builder %>
@@ -54,7 +62,7 @@
 </div>
 
 <div class="form-group row">
-<label class="col-form-label col-lg-3 col-sm-4">Neto</label>
+<label class="col-form-label col-lg-3 col-sm-4">IVA</label>
 <div class="col-lg-9 col-sm-8">
   <%= f.text_field :neto_iva, id: :sale_neto_iva , class: "form-control"  %>
 </div>
