--- a/app/views/sales/_detail_fields.html.erb
+++ b/app/views/sales/_detail_fields.html.erb
@@ -11,19 +11,19 @@
             <%= f.select :product_id, Product.all.collect { |p| [p.nombre, p.id, {'data-precio':p.precio_venta}]},{ prompt: '- Seleccionar -'},{class:"select_product form-control"}%>
         </div>
         </div>
-
-        <div class="col-xs-6 col-sm-3">
-            <%= f.input :importe, input_html: { :class => "input_importe" }, label: false  %>
+        
+        <div class="col-xs-6 col-sm-2 ">
+        <div class="form-group">
+            <label class="col-form-label">0.00</label>
+        </div>
         </div>
 
         <div class="col-xs-6 col-sm-">
-            <%= link_to_remove_association "Eliminar", f, class: 'btn btn-primary btn-xs' %>
+            <%= link_to_remove_association "Eliminar", f, class: 'btn btn-primary btn-xs delete' %>
         </div>
 
-        <div class="col-xs-6 col-sm-2 text-right">
-            <div class="form-group">
-                <label class="col-form-label">0.00</label>
-            </div>
+        <div class="col-xs-6 col-sm-3">
+        <%= f.input :importe, input_html: { :class => "input_importe" }, label: false  %>
         </div>
         
     </div>
