--- a/app/views/sales/edit.html.erb
+++ b/app/views/sales/edit.html.erb
@@ -1,6 +1,15 @@
-<h1>Editing Sale</h1>
+<div class="pull-right">
+<%= link_to "Listado", sales_path, class: 'btn btn-light' %>
+<%= link_to "Eliminar", sale_path, method: :delete, class: 'btn btn-dark'  %>
+</div>
+<div class="clearfix"></div>
+<br />
 
 <%= render 'form', sale: @sale %>
 
-<%= link_to 'Show', @sale %> |
-<%= link_to 'Back', sales_path %>
+
+
+
+
+
+
