[#156074652] Importar archivos de Excel con la Gema roo -Notas -Se creo la opcion de importar archivos para las tablas bussines_names, companies y products -El archivo de excel debe de ser .xlsx y con el formato que se establecio en Pivotal Tracker 	modified:   Gemfile 	modified:   Gemfile.lock 	modified:   app/controllers/bussines_names_controller.rb 	modified:   app/controllers/companies_controller.rb 	modified:   app/controllers/products_controller.rb 	modified:   app/models/bussines_name.rb 	modified:   app/models/company.rb 	modified:   app/models/product.rb 	modified:   app/views/bussines_names/index.html.erb 	modified:   app/views/companies/index.html.erb 	modified:   app/views/products/index.html.erb 	modified:   config/routes.rb

--- a/app/views/bussines_names/index.html.erb
+++ b/app/views/bussines_names/index.html.erb
@@ -1,6 +1,14 @@
+<div class="pull-left">
+  <%= form_tag import_bussines_names_path, multipart: true do %>
+    <%= file_field_tag :file, class: 'btn btn-default' %>
+    <%= submit_tag "Importar", class: 'btn btn-info'%>
+  <% end %> 
+</div>
+
 <div class="pull-right">
   <%= link_to "Nueva", new_bussines_name_path, class: 'btn btn-danger' %>
 </div>
+
 <div class="clearfix"></div>
 <br />
 
