--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,3 +1,10 @@
+<div class="pull-left">
+  <%= form_tag import_companies_path, multipart: true do %>
+    <%= file_field_tag :file, class: 'btn btn-default' %>
+    <%= submit_tag "Importar", class: 'btn btn-info'%>
+  <% end %> 
+</div>
+
 <div class="pull-right">
   <%= link_to "Nueva", new_company_path, class: 'btn btn-danger' %>
 </div>
